Use built-in ID type and switch Base64 encode/decode library.